public class MultiSet<T> {

    public boolean add(T item) {
        throw new UnsupportedOperationException("This method is not yet implemented.");
    }

    public void remove(T item) {
        throw new UnsupportedOperationException("This method is not yet implemented.");
    }

    public boolean contains(T item) {
        throw new UnsupportedOperationException("This method is not yet implemented.");
    }

    public boolean isEmpty() {
        throw new UnsupportedOperationException("This method is not yet implemented.");
    }

    public int count(T item) {
        throw new UnsupportedOperationException("This method is not yet implemented.");
    }

    public int size() {
        throw new UnsupportedOperationException("This method is not yet implemented.");
    }
}
